# JOGO_DO_BIXO

./: .dockerignore  .env-example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/apis_jogo_bixo/infraestructure/: db.sqlite3
backend/apis_jogo_bixo/infraestructure/django_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
frontend/poke-bixo-app/: .env-example  Dockerfile  index.html  package-lock.json  package.json
mobile/poke-bicho-app/: .env-example  Dockerfile  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  vite.config.ts
mobile/poke-bicho-app/android/app/src/main/res/values/: strings.xml
