[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.7.0",
    "django>=6.0.5",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "markdown>=3.10.2",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.15.15"]
